homework/5.kubernetes-network/Mikhail_Onishchenko/postgres-lesson5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  strategy:
   type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            cpu: 200m 
            memory: 400Mi
          limits:
            cpu: 200m
            memory: 600Mi
        volumeMounts:
        - name: sqldata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: mydir
        hostPath:
          path: /var/lib/postgresql
          type: DirectoryOrCreate
      - name: sqldata
        persistentVolumeClaim:
          claimName: sqldata
