homework/5.kubernetes-network/Mikhail_Onishchenko/redmine-lesson5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  strategy:
   type: Recreate
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: postgres
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 200m 
            memory: 400Mi
          limits:
            cpu: 200m
            memory: 600Mi
