homework/5.kubernetes-network/Mikhail_Onishchenko/redmine_service-lesson5.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmineservice
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
