homework/5.kubernetes-network/Mikhail_Onishchenko/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testredmineonline
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: redmineservice
          servicePort: 80
